--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      lang="cs">
 <head>
     <link rel="stylesheet" href="/css/w3.css" th:fragment="css-primary">
     <link rel="stylesheet" href="/css/custom.css" th:fragment="css-secondary">
