--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      lang="cs">
 <head>
     <meta charset="UTF-8">
     <link th:replace="fragments.html :: css-primary">
@@ -11,7 +12,7 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
-    <h2>Zadání</h2>
+    <h2>Zadání.</h2>
     <p>Úkolem projektu je vytvořit webovou aplikaci pro zjednodušení plánování skupinových událostí. Umožňuje vytvoření
         události s různými časovými termíny a místy, poté si pozvaní uživatelé na událost vyberou preferované termíny a
         místa pomocí formuláře. Svoji volbu uloží a autor události zvolí ideální termín a místo na základě volby všech
@@ -21,6 +22,7 @@
         termínů a míst) může pouze její autor. Uživatel zadává do aplikace základní informace o sobě – jméno, příjmení,
         telefon a email. Termíny jsou uvedeny jako datum a čas, u míst je uvedena adresa, název podniku nebo místa a
         zeměpisné souřadnice.</p>
+    <img src="graphics/image-time.png" alt="kalendář a hodiny" class="center">
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
