--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,7 @@
         telefon a email. Termíny jsou uvedeny jako datum a čas, u míst je uvedena adresa, název podniku nebo místa a
         zeměpisné souřadnice.</p>
     <img src="graphics/image-time.png" alt="kalendář a hodiny" class="center">
+    <a href='https://www.freepik.com/vectors/calendar' class="center">Calendar vector created by pch.vector - www.freepik.com</a>
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
